# kobuddy

./: .gitignore  .gitmodules  LICENSE  README.md  README.org  backup  kobuddy  pyproject.toml  ruff.toml  run  setup.cfg  setup.py  tox.ini
.ci/: run
.circleci/: config.yml
.github/workflows/: main.yml
kobo/: __init__.py  __main__.py
scripts/: backup.py
src/kobuddy/: __init__.py  __main__.py  backup.py  common.py  kobo_device.py  sqlite.py
src/kobuddy/tests/: test_kobo.py  test_rows.py
tests/: conftest.py  test_kobo.py  test_rows.py
